resolve the warnings